overflow issue

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ body {
   background-position: center;
   /* background-attachment: fixed; */
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   z-index: 0;
 }
 .header__text-box {
